# audio-snap-ai

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  workflow.py
backend/: database.py  graph.py  nodes.py  state.py  utils.py  workflow.py
config/: settings.py
frontend/: components.py  sidebar.py  styles.py  views.py
